--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -46,7 +46,7 @@
 					<li id="reviews">
 						{% for review in reviews %}
 						<li>
-							{% include review.html %}
+							{{review.name}}
 						</li>
 						{% endfor %}
 					</li>
