--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -44,13 +44,19 @@
 				
 				<ul class="uk-switcher uk-margin">
 					<li id="reviews">
-						{% for review in reviews %}
-						<li>
-							{{review.name}}
-						</li>
+						<div class=""></div>
+							{% for review in reviews %}
+								<li>
+									{{review.name}}
+								</li>
+						</div>
 						{% endfor %}
 					</li>
-					<li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+					<li id="Guide">
+						<div class="">
+							<li>JHIN MOLA</li>
+						</div>
+					</li>
 				</ul>
 
 			</div>
