--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -51,10 +51,10 @@
 								<div class="uk-card">
 									<div class="uk-card-header" href="#">
 										<div class="uk-grid uk-padding-small uk-margin-remove" >
-											<div class="uk-width-4-5@m">
+											<div class="uk-width-4-5@m uk-margin-remove uk-padding-remove">
 												<h3>Análisis de {{page.name}} por {{review.user-id}}</h3>
 											</div>
-											<div class="uk-width-1-5@m">
+											<div class="uk-width-1-5@m uk-text-light uk-background-primary">
 												<h3>{{review.score}}</h3>
 											</div>
 											
