--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -48,7 +48,7 @@
 						<ul uk-accordion="multiple: true">
 							{% for review in reviews %}
 							<li class="uk-open">
-								<div class="uk-card">
+								<div class="uk-card uk-remove-padding uk-remove-margin">
 									<div class="uk-card-header" href="#">
 										<div class="uk-grid uk-padding-small uk-margin-remove" >
 											<div class="uk-width-4-5@m uk-margin-remove uk-padding-remove">
