--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -48,8 +48,8 @@
 						<ul uk-accordion="multiple: true">
 							{% for review in reviews %}
 							<li class="uk-open">
-								<div class="uk-card uk-remove-padding uk-remove-margin">
-									<div class="uk-card-header" href="#">
+								<div class="uk-card uk-padding-remove uk-margin-remove">
+									<div class="uk-card-header uk-padding-remove uk-margin-remove" href="#">
 										<div class="uk-grid uk-padding-small uk-margin-remove" >
 											<div class="uk-width-4-5@m uk-margin-remove uk-padding-remove">
 												<h3>Análisis de {{page.name}} por {{review.user-id}}</h3>
