--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -50,7 +50,7 @@
 							<li class="uk-open">
 								<div class="uk-card uk-padding-remove uk-margin-remove">
 									<div class="uk-card-header uk-padding-remove uk-margin-remove" href="#">
-										<div class="uk-grid uk-padding-small uk-margin-remove" >
+										<div class="uk-grid uk-padding-remove uk-margin-remove" >
 											<div class="uk-width-4-5@m uk-margin-remove uk-padding-remove">
 												<h3>Análisis de {{page.name}} por {{review.user-id}}</h3>
 											</div>
