--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -53,10 +53,10 @@
 										<div class="uk-grid-match uk-padding-remove uk-margin-remove" >
 											<div class="uk-width-2-3@m uk-margin-remove uk-padding-remove">
 												<h3>Análisis de {{page.name}}</h3>
-												<h4 class="uk-margin-small">por {{review.user-id}}</h4>
+												<h4 class="uk-margin-remove">por {{review.user-id}}</h4>
 												<p class="uk-article-meta">Publicado el {{review.date}}</p>
 											</div>
-											<div class="uk-width-1-3@m uk-ligth uk-background-primary uk-text-center">
+											<div class="uk-width-1-3@m uk-margin-remoove uk-light uk-background-primary uk-text-center">
 												<span style="font-size: 48px;">{{review.score}}<style>
 											</div>
 											
