--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -50,7 +50,7 @@
 							<li class="">
 								<div class="uk-card uk-padding-remove uk-margin-remove">
 									<div class="uk-card-header uk-padding-remove uk-margin-remove" href="#">
-										<div class="uk-grid-match uk-padding-remove uk-margin-remove" >
+										<div class="uk-grid-match uk-padding-remove uk-margin-remove uk-background-secondary" >
 											<div class="uk-width-2-3@m uk-margin-remove uk-padding-remove">
 												<h3>Análisis de {{page.name}}</h3>
 												<h4 class="uk-margin-remove">por {{review.user-id}}</h4>
