--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -50,8 +50,8 @@
 							<li class="">
 								<div class="uk-card uk-padding-remove uk-margin-remove">
 									<div class="uk-card-header uk-padding-remove uk-margin-remove" href="#">
-										<div class="uk-grid-match uk-padding-remove uk-margin-remove uk-background-secondary" >
-											<div class="uk-width-2-3@m uk-margin-remove uk-padding-remove">
+										<div class="uk-grid-match uk-padding-remove uk-margin-remove" >
+											<div class="uk-width-1-2@m uk-margin-remove uk-padding-remove uk-background-secondary">
 												<h3>Análisis de {{page.name}}</h3>
 												<h4 class="uk-margin-remove">por {{review.user-id}}</h4>
 												<p class="uk-article-meta">Publicado el {{review.date}}</p>
