--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -50,16 +50,13 @@
 							<li class="">
 								<div class="uk-card uk-padding-remove uk-margin-remove">
 									<div class="uk-card-header uk-padding-remove uk-margin-remove" href="#">
-										<div class="uk-padding-remove uk-margin-remove" >
-											<div class="uk-width-2-3@m uk-margin-remove uk-padding-remove uk-background-secondary">
-												<h3>Análisis de {{page.name}}</h3>
-												<h4 class="uk-margin-remove">por {{review.user-id}}</h4>
-												<p class="uk-article-meta">Publicado el {{review.date}}</p>
+										<div class="uk-grid">
+											<div class="uk-width-2-3@m uk-background-secondary">
+												2-3@m
 											</div>
-											<div class="uk-width-1-3@m uk-margin-remoove uk-light uk-background-primary uk-text-center">
-												<span style="font-size: 48px;">{{review.score}}<style>
+											<div class="uk-width-1-3@m uk-background-primary">
+												1-3@m
 											</div>
-											
 										</div>
 									</div>
 								</div>
