--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -14,9 +14,9 @@
 		<div class="uk-container">
 			<div class="uk-grid uk-padding">
 				<div class="uk-width-1-1 uk-padding-remove uk-margin-remove">
-                    <h3 class="uk-card-title">
+                    <h2 class="uk-card-title">
                         {{ page.name }}</a>
-                    </h3>
+                    </h2>
 				</div>
 				<div class="uk-card uk-card-default uk-padding-remove uk-margin uk-card-hover" style="width:264px;">
 					<div class="uk-card-media-bottom" style="height: 352px">
@@ -50,12 +50,14 @@
 							<li class="">
 								<div class="uk-card uk-padding-remove uk-margin-remove">
 									<div class="uk-card-header uk-padding-remove uk-margin-remove" href="#">
-										<div class="uk-grid">
-											<div class="uk-width-2-3@m uk-background-secondary">
-												2-3@m
+										<div class="uk-grid-match">
+											<div class="uk-width-2-3@m">
+												<h3 class="uk-margin-remove uk-padding-remove">Análisis de {{page.name}}</h3>
+												<h4 class="uk-margin-remove uk-padding-remove">por {{review.user-id}}</h4>
+												<span class="uk-margin-remove uk-padding-remove">Publicado el {{review.date}}</span>
 											</div>
-											<div class="uk-width-1-3@m uk-background-primary">
-												1-3@m
+											<div class="uk-width-1-3@m uk-light uk-background-primary">
+												<span class="font-size: 70px">{{review.score}}</span>
 											</div>
 										</div>
 									</div>
