--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -57,7 +57,7 @@
 												<span class="uk-margin-remove uk-padding-remove">Publicado el {{review.date}}</span>
 											</div>
 											<div class="uk-width-1-3@m uk-light uk-background-primary">
-												<span class="font-size: 70px">{{review.score}}</span>
+												<span style="font-size: 70px">{{review.score}}</span>
 											</div>
 										</div>
 									</div>
