--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -56,7 +56,7 @@
 												<h4 class="uk-margin-remove uk-padding-remove">por {{review.user-id}}</h4>
 												<span class="uk-margin-remove uk-padding-remove">Publicado el {{review.date}}</span>
 											</div>
-											<div class="uk-width-1-5@m uk-light uk-background-primary">
+											<div class="uk-width-1-5@m uk-light uk-background-primary uk-text-center">
 												<span style="font-size: 70px">{{review.score}}</span>
 											</div>
 										</div>
