--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -51,12 +51,12 @@
 								<div class="uk-card uk-padding-remove uk-margin-remove">
 									<div class="uk-card-header uk-padding-remove uk-margin-remove" href="#">
 										<div class="uk-grid uk-grid-match">
-											<div class="uk-width-4-5@m">
+											<div class="uk-width-expand">
 												<h3 class="uk-margin-remove uk-padding-remove">Análisis de {{page.name}}</h3>
 												<h4 class="uk-margin-remove uk-padding-remove">por {{review.user-id}}</h4>
 												<span class="uk-margin-remove uk-padding-remove">Publicado el {{review.date}}</span>
 											</div>
-											<div class="uk-width-1-5@m uk-light uk-background-primary uk-text-center">
+											<div class="uk-background-primary uk-text-center" style="height:108px; width:108px">
 												<span style="font-size: 70px">{{review.score}}</span>
 											</div>
 										</div>
