--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -48,6 +48,13 @@
 						<ul uk-accordion="multiple: true">
 							{% for review in reviews %}
 							<li class="">
+
+
+									<a class="uk-accordion-title" href="#">Item 1</a>
+							
+							
+
+
 								<div class="uk-card uk-padding-remove uk-margin-remove">
 									<div class="uk-card-header uk-padding-remove uk-margin-remove uk-accordion-title" href="#">
 										<div class="uk-grid uk-grid-match">
