--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -50,40 +50,34 @@
 							<li class="">
 
 
-									<a class="uk-accordion-title" href="#">Item 1</a>
-							
-							
-
-
+							<a class="uk-accordion-title" href="#">
 								<div class="uk-card uk-padding-remove uk-margin-remove">
-									<div class="uk-card-header uk-padding-remove uk-margin-remove uk-accordion-title" href="#">
-										<div class="uk-grid uk-grid-match">
-											<div class="uk-width-expand">
-												<a class="uk-accordion-title" href="#">Item 1</a>
-												<h3 class="uk-margin-remove uk-padding-remove">Análisis de {{page.name}}</h3>
-												<h4 class="uk-margin-remove uk-padding-remove">por {{review.user-id}}</h4>
-												<span class="uk-margin-remove uk-padding-remove">Publicado el {{review.date}}</span>
-											</div>
-											<div class="uk-background-primary uk-margin-remove uk-padding-remove uk-text-center uk-light" style="height:108px; width:108px">
-												<span style="font-size: 70px">{{review.score}} </span>
-											</div>
+								<div class="uk-card-header uk-padding-remove uk-margin-remove uk-accordion-title" href="#">
+									<div class="uk-grid uk-grid-match">
+										<div class="uk-width-expand">
+											<a class="uk-accordion-title" href="#">Item 1</a>
+											<h3 class="uk-margin-remove uk-padding-remove">Análisis de {{page.name}}</h3>
+											<h4 class="uk-margin-remove uk-padding-remove">por {{review.user-id}}</h4>
+											<span class="uk-margin-remove uk-padding-remove">Publicado el {{review.date}}</span>
+										</div>
+										<div class="uk-background-primary uk-margin-remove uk-padding-remove uk-text-center uk-light" style="height:108px; width:108px">
+											<span style="font-size: 70px">{{review.score}} </span>
 										</div>
 									</div>
 								</div>
+							</div>
+						</a>
+							
+							
+
+
+								
 								
 								<div class="uk-accordion-content">
 									{{review.content}}
 								</div>
 							</li>
-
 							<hr class="uk-divider-icon">
-
-							<li class="uk-open">
-								<a class="uk-accordion-title" href="#">Item 1</a>
-								<div class="uk-accordion-content">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								</div>
-							</li>
 							{% endfor %}
 						</ul>
 					</li>
