--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -50,6 +50,7 @@
 							<li class="">
 
 
+							<a class="uk-accordion-title" href="#">
 								<div class="uk-card uk-padding-remove uk-margin-remove">
 								<div class="uk-card-header uk-padding-remove uk-margin-remove uk-accordion-title" href="#">
 									<div class="uk-grid uk-grid-match">
@@ -64,7 +65,7 @@
 									</div>
 								</div>
 							</div>
-
+						</a>
 							
 							
 
