--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -34,7 +34,8 @@
 
 			<div class="uk-width-1-1@m">
 
-				{% assign reviews = site.articles | where_exp:"item", "item.game-id == page.game-id" | "item.type == review" %}		
+				{% assign reviews = site.articles | where_exp:"item", "item.game-id == page.game-id" | "item.type == review" %}
+				{% assign main-page-guide = site.articles | find_exp:"item", "item.game-id == page.game-id" | "item.type == guide" | "item-navigation == main-page" %}		
 
 
 				<ul class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-fade">
@@ -72,7 +73,9 @@
 							{% endfor %}
 						</ul>
 					</li>
-					<li id="guide"></li>
+					<li id="guide">
+						{{main-page-guide.content}}
+					</li>
 				</ul>
 			</div>
 		</div>		
