--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -35,10 +35,10 @@
 			<div class="uk-width-1-1@m">
 
 
-				{% assign guide = site.articles | find_exp:"item", "item.game-id == page.game-id AND item.type == 'guide' AND item.navigation == 'main-page'" %}		
+				{% assign guide = site.articles | find_exp:"item", "item.game-id == page.game-id and item.type == 'guide' and item.navigation == 'main-page'" %}		
 
 				
-				{{ assign reviews = site.articles | where_exp: "item", "item.game-id == page.game-id and item.type == 'review'" }}
+				{% assign reviews = site.articles | where_exp: "item", "item.game-id == page.game-id and item.type == 'review'" %}
 
 
 				<ul class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-fade">
