--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -34,8 +34,8 @@
 
 			<div class="uk-width-1-1@m" id="game-content">
 
-				{% assign reviews = site. articles | where_exp:"item", "item.game-id == page.game-id" %}
-				{% assign guide = site.articles | find_exp:"item", "item.navigation == main-page" %}	
+				{% assign reviews = site. articles | where_exp:"item", "item.game-id == page.game-id and item.navigation == 'review'" %}
+				{% assign guide = site.articles | find_exp:"item", "item.navigation == 'main-page'" %}	
 			
 				<ul class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-fade">
 					<li><a href="#">Análisis</a></li>
