--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -35,7 +35,7 @@
 			<div class="uk-width-1-1@m" id="game-content">
 
 				{% assign reviews-not-filtered = site.articles | where_exp:"item", "item.game-id == page.game-id" %}
-				{% assign reviews = reviews-not-filtered | where_exp:"item", "item.type == 'review"}}
+				{% assign reviews = reviews-not-filtered | where_exp:"item", "item.type == 'review'"}}
 
 
 				
