--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -33,8 +33,8 @@
 				{% assign reviews = reviews-game-not-filtered | where_exp:"item", "item.type == 'review'"}}
 
 				{% assign guide-game-not-filtered = site.articles | find_exp:"item", "item", "item.game-id == page.game-id" %}
-				{% assign guide-type-not-filtered = guide-game-not-filtered | where_exp:"item", "item.type == 'guide'"%}
-				{% assign guide = guide-type-not-filtered | where_exp:"item", "item.category == 'main-page'"%}
+				{% assign guide = guide-game-not-filtered | find_exp:"item", "item.type == 'guide'"%}
+				
 		
 				<ul class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-fade">
 					<li><a href="#">Análisis</a></li>
