--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -32,8 +32,9 @@
 				{% assign reviews-game-not-filtered = site.articles | where_exp:"item", "item.game-id == page.game-id" %}
 				{% assign reviews = reviews-game-not-filtered | where_exp:"item", "item.type == 'review'"}}
 
-				{% assign guide-game-not-filtered = site.articles | find_exp:"item", "item", "item.game-id == page.game-id" %}
-				{% assign guide = guide-game-not-filtered | find_exp:"item", "item.type == 'guide'"%}
+				{% assign guide-game-not-filtered = site.articles | where_exp:"item", "item", "item.game-id == page.game-id" %}
+				{% assign guide-type-not-filtered = guide-game-not-filtered | where_exp:"item", "item.type == 'guide'"%}
+				{% assign guide = guide-type-not-filtered | where_exp:"item", "item.category == 'main-page'"%}
 				
 		
 				<ul class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-fade">
