--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -34,7 +34,7 @@
 
 				{% assign guide-game-not-filtered = site.articles | where_exp: "item", "item.game-id == page.game-id" %}
 				{% assign guide-type-not-filtered = guide-game-not-filtered | where_exp:"item", "item.type == 'guide'"%}
-				{% assign guide = guide-type-not-filtered | find_exp: "item", "item.category == 'main-page'"%}
+				{% assign guides = guide-type-not-filtered | where_exp: "item", "item.category == 'main-page'"%}
 				
 		
 				<ul class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-fade">
@@ -75,10 +75,16 @@
 						</ul>
 					</li>
 					<li id="guide">
-						{{guide.content}}
+						<br/>GUIDE NOT FILTERED<br/>
+						{% for guide in guide-game-not-filtered %}
+						{{guide.name}}
+						{% endfor %}
+						<br/>GUIDE TYPE NOT FILTERED<br/>
+						{% for guide in guide-type-not-filtered %}
+						{{guide.name}}
+						{% endfor %}
 					</li>
 				</ul>
-
 			</div>
 		</div>		
 	</body>
