--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -37,11 +37,11 @@
 
 				
 				<br/>GUIDE NOT FILTERED<br/>
-				{% for guide1 in guide-game-not-filtered %}
+				{% for guide1 in guides-game-not-filtered %}
 				{{guide1.name}}
 				{% endfor %}
 				<br/>GUIDE TYPE NOT FILTERED<br/>
-				{% for guide2 in guide-type-not-filtered %}
+				{% for guide2 in guides-type-not-filtered %}
 				{{guide2.name}}
 				{% endfor %}
 				<br/>
