--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -77,7 +77,9 @@
 						</ul>
 					</li>
 					<li id="guide">
-						{{guide.content}}
+						{% for guide in guides %}
+							{{guide.content}}
+						{% endfor %}
 					</li>
 				</ul>
 			</div>
