--- a/_includes/totk_guide_main.html
+++ b/_includes/totk_guide_main.html
@@ -6,7 +6,7 @@
                 <h4 id="quests">Misiones</h4>
                 <h4 id="sanctuaries">Santuarios</h4>
                 <h4 id="temples">Templos</h4>
-                {% include totk_guide_gear %}
+                {% include totk_guide_gear.html %}
             </div>
         </div>
         <div class="uk-width-1-5@m uk-first@m">
